[INTERNAL][FIX] m.Link: fixed vertical alignment in Formatted Text
BCP: 1770201172

--- a/src/sap.m/src/sap/m/themes/base/Link.less
+++ b/src/sap.m/src/sap/m/themes/base/Link.less
@@ -59,6 +59,10 @@
 	vertical-align: text-bottom;
 }
 
+.sapMFT .sapMLnk {
+	vertical-align: text-top;
+}
+
 /* Global focus offset */
 html.sap-desktop .sapMLnk:focus:not(.sapMLnkDsbl) {
 	outline-offset: -1px;
